<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Video Player Lite</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="storage_permission_denied">Permission to access storage was denied!\n We\'re not able to get your videos!</string>
    <string name="action_settings">Settings</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>

    <string name="action_info">Info</string>
    <string name="action_play">Play</string>
    <string name="action_play_popup">Play Popup</string>
    <string name="action_play_background">Background Audio</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_AZ">A-Z</string>
    <string name="action_sortZA">Z-A</string>
    <string name="action_sort_size">size</string>
    <string name="action_sort_total_videos">Total Videos</string>
    <string name="search_title">Search</string>
    <string name="action_view_by_list">View by list</string>
    <string name="action_view_by_grid">View by grid</string>
    <string name="action_share">Share</string>

    <string name="folder">Folder</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="about">About</string>

    <string name="confirm_cancel">Cancel</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="confirm_delete">Delete</string>
    <string name="confirm">are you sure you want to delete </string>
    <string name="delete_video">Delete Video ?</string>
    <string name="properties">Properties</string>
    <string name="file_location">Location</string>
    <string name="format">Format</string>
    <string name="file_size">Size</string>
    <string name="duration">Duration</string>
    <string name="resolution">Resolution</string>
    <string name="date_added">Date</string>

    <string name="video">Videos</string>
    <string name="menu">Menu</string>
    <string name="now_playing">Now Playing</string>
    <string name="no_video_playing">No video is played</string>
    <string name="fileNameExist">This file name is existed :(</string>
    <string name="ThemeColor">Theme Color</string>

    <string name="third_party_libraries_message" translatable="false">
        Third Party Libraries
        \n\nMaterial Dialogs Version 0.9.0.2
        \nCopyright (c) 2014-2016 Aidan Michael Follestad
        \nThe MIT License (MIT)   \n
        \n\nGestureViews Version 2.5.2
        \nCopyright alexvasilkov
        \nLicensed under the Apache License, Version 2.0
        \n\nMaterial Icon
        \nVersion 1.1.3
        \nCopyright 2015 CodeCrafted.
        \nReleased under the Apache 2.0 License
        \n\nUniversal Image Loader
        \nVersion 1.9.4
        \nCopyright 2011-2015 Sergey Tarasevich
        \nLicensed under the Apache License, Version 2.0
        \n\nCWAC-Provider
        \nVersion 0.5.3
        \nCopyright (C) 2015 commonsguy
        \nLicensed under the Apache License, Version 2.0;
        \n\nGlide
        \nVerision 4.9.0
        \nCopyright Sam Judd - @sjudd on GitHub, @samajudd on Twitter
        \nLicensed BSD, part MIT and Apache 2.0;
        \n\nHawk 2.0
        \nVerision 2.0.1
        \nCopyright 2016 Orhan Obut
        \nLicensed under the Apache License, Version 2.0;
    </string>
    <string name="banner_test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ads" translatable="false">ca-app-pub-3863685670972903/1688567871</string>
    <string name="txt_sleep_app">An extension help turn off music, video is playing on your device, work well with Youtube, Spotify, Google Music and all of music, video app.</string>
    <!--add new -->
    <string name="music_player_link">Music Player</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_video_player">Rate Us</string>
    <string name="share_video_player">Share</string>
    <string name="share_desc">Amazing Video Player that play every video. Download to watch to your favourite videos.</string>
    <string name="version">Version</string>
    <string name="changelog">Changelog</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="licenses">Licenses</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact">Contact</string>
    <string name="write_an_email">Write an email</string>
    <string name="follow_on_twitter">Follow on Twitter</string>
    <string name="rate_on_google_play">Rate</string>
    <string name="rate_on_google_play_summary">Leave a positive rating on Google Play if you like Video Player.</string>
    <string name="vikas_mishra" translatable="false">GoldsMine Apps</string>
    <string name="special_thanks_to">Special thanks to</string>
    <string name="bangalore_india" translatable="false">Bangalore, India</string>
    <string name="google_plus" translatable="false">Google Plus</string>
    <string name="git_hub" translatable="false">GitHub</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="website">Website</string>
    <string name="dialog_changelog_title">Change Log</string>
    <string name="dialog_privacy_title">Privacy Policy</string>
    <string name="ok">OK</string>

</resources>
