<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_go_to_playing"
        android:icon="@drawable/ic_play_white"
        android:orderInCategory="1"
        android:title="@string/now_playing"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_setting"
        android:title="@string/about"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Sort"
        android:orderInCategory="4"
        android:title="@string/action_sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/action_sort_AZ" />
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/action_sortZA" />
            <item
                android:id="@+id/menu_sort_by_total_videos"
                android:title="@string/action_sort_total_videos" />
        </menu>
    </item>

    <item
        android:id="@+id/action_musicPlayer"
        android:icon="@drawable/ic_play_white"
        android:orderInCategory="5"
        android:title="@string/music_player_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_app"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="6"
        android:title="@string/rate_video_player"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="7"
        android:title="@string/share_video_player"
        app:showAsAction="never" />

</menu>
