<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_go_to_playing"
        android:orderInCategory="1"
        android:icon="@drawable/ic_play_white"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/now_playing"/>
    <item
        android:id="@+id/action_view_list"
        android:orderInCategory="2"
        android:title="@string/action_view_by_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Sort"
        android:orderInCategory="3"
        android:title="@string/action_sort"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/action_sort_AZ"/>
            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/action_sortZA"/>
            <item
                android:id="@+id/menu_sort_by_size"
                android:title="@string/action_sort_size"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_rate_app"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="4"
        android:title="@string/rate_video_player"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="5"
        android:title="@string/share_video_player"
        app:showAsAction="never" />
</menu>
